javascript now loaded correctly for index, removed users router

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,3 +24,6 @@ block content
       li.no-select Test Li
       li.no-select Test Li
       li.no-select Test Li
+  
+block scripts
+  script(type="text/javascript", src="/javascripts/main.js")
