--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-    script(src="https://code.jquery.com/jquery-2.2.0.min.js")
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
+    
+    script(type="text/javascript", src="https://code.jquery.com/jquery-2.2.0.min.js")
+    script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
+    
     block scripts
