added click handler skeletons for index

--- a/views/product.jade
+++ b/views/product.jade
@@ -26,4 +26,4 @@ block content
       li.no-select Test Li
   
 block scripts
-  script(type="text/javascript", src="/javascripts/main.js")
+  script(type="text/javascript", src="/javascripts/product.js")
