--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   font-size: 0px;
   padding: 0px 0px 0px 0px;
   background-color: #CECEFF;
+  min-width: 412px;
 }
 
 a {
@@ -12,6 +13,15 @@ a {
 .jumbotron,  #addProduct *{
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   text-align: center;
+}
+
+.jumbotron label {
+  padding: 0px 0px 0px 0px;
+}
+
+.jumbotron input {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .no-select {  /*Prevents the user from selecting text*/
@@ -52,8 +62,13 @@ input:focus {
   cursor: pointer;
 }
 
+#productList p {
+  display: inline-block;;
+}
+
 #totalCost {
   text-align: center;
+  margin-bottom: 24px;
 }
 
 #totalCost * {
