--- a/views/index.jade
+++ b/views/index.jade
@@ -5,25 +5,22 @@ block content
     div.container
       h2 Add product
       div.row
-        label(class="col-xs-4") Product Name
-        label(class="col-xs-4") Cost (USD)
-        label(class="col-xs-2") Quantity
+        label(class="col-xs-3") Product Name
+        label(class="col-xs-3") Product Description
+        label(class="col-xs-3") Cost (USD)
+        label(class="col-xs-1") Quantity
       form#addProduct
         div.row
-          input#itemName(type="text" class="col-xs-4" required)
-          input#itemCost(type="number" step="0.01" class="col-xs-4" required)
-          input#itemCount(type="number" value="1" step="1" class="col-xs-2" required)
+          input#itemName(type="text" class="col-xs-3" required)
+          input#itemDesc(type="text" class="col-xs-3" required)
+          input#itemCost(type="number" step="0.01" class="col-xs-3" required)
+          input#itemCount(type="number" value="1" step="1" class="col-xs-1" required)
           input(type="submit" class="col-xs-2" required)
   div#totalCost
     h3 Total: 
     h3#totalAmount jQuery/Jade Magic
   div.container
     ul#productList
-      li.no-select Test Li
-      li.no-select Test Li
-      li.no-select Test Li
-      li.no-select Test Li
-      li.no-select Test Li
   
 block scripts
   script(type="text/javascript", src="/javascripts/main.js")
