product page layed out

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,6 +21,7 @@ block content
     h3#totalAmount jQuery/Jade Magic
   div.container
     ul#productList
+      //- autopopulate items with #each li(data-id= item._id) 
   
 block scripts
   script(type="text/javascript", src="/javascripts/main.js")
