index now autopopulated with jade, items link to their edit page

--- a/public/stylesheets/product.css
+++ b/public/stylesheets/product.css
@@ -7,6 +7,11 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+#item li {
+  color: black;
+  cursor: default;
+}
+
 #item li:hover {
   color: black;
   cursor: default;
