items can now be updated

--- a/public/stylesheets/product.css
+++ b/public/stylesheets/product.css
@@ -7,6 +7,11 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+#updateItem * {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
 #item li {
   color: black;
   cursor: default;
