items can now be deleted

--- a/views/product.jade
+++ b/views/product.jade
@@ -28,6 +28,7 @@ block content
         p.no-select(class="col-xs-3") Count: #{item.count}
     a(href="/")
       button(value="Back to List") Back to List
+    button#delete.glyphicon.glyphicon-trash
   
 block scripts
   script(type="text/javascript", src="/javascripts/product.js")
