--- a/views/index.jade
+++ b/views/index.jade
@@ -4,17 +4,21 @@ block content
   div.jumbotron
     div.container
       h2.no-select Add product
-      div.row.no-select
-        label(class="col-xs-3") Product Name
-        label(class="col-xs-3") Product Description
-        label(class="col-xs-3") Cost (USD)
-        label(class="col-xs-1") Quantity
       form#addProduct.no-select
+        div.row.no-select
+          label(class="col-xs-4") Product Name
+          label(class="col-xs-6") Product Description
+          label(class="col-xs-2") Cost (USD)
         div.row
-          input#itemName(type="text" class="col-xs-3" required)
-          input#itemDesc(type="text" class="col-xs-3" required)
-          input#itemCost(type="number" step="0.01" class="col-xs-3" min="0" required)
-          input#itemCount(type="number" value="1" step="1" class="col-xs-1" min="1" required)
+          input#itemName(type="text" class="col-xs-4" required)
+          input#itemDesc(type="text" class="col-xs-6" required)
+          input#itemCost(type="number" step="0.01" class="col-xs-2" min="0" required)
+        div.row#secondHeaders
+          label(class="col-xs-8") Image Address
+          label(class="col-xs-2") Quantity
+        div.row
+          input#itemImage(type="text" class="col-xs-8")
+          input#itemCount(type="number" value="1" step="1" class="col-xs-2" min="1" required)
           input(type="submit" class="col-xs-2" required)
   div#totalCost.no-select
     h3 Total: 
