--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,13 +2,12 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/lib/bootstrap/dist/css/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
     block links
   body
     block content
     
-    script(type="text/javascript", src="https://code.jquery.com/jquery-2.2.0.min.js")
-    script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
-    
+    script(type="text/javascript", src="/lib/jquery/dist/jquery.min.js")
+    script(type="text/javascript", src="/lib/bootstrap/dist/bootstrap.min.js")
     block scripts
